[tool.poetry]
name = "sport_data"
version = "0.1.0"
description = ""
authors = ["ugo_lbck <ugo@seo-quantum.com>"]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["all"], version = "*"}
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.5.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
